--- a/timeline.html
+++ b/timeline.html
@@ -19,6 +19,7 @@
     }
 
     #timeline {
+      width:100%;
       height:100px;
     }
 
@@ -47,6 +48,7 @@
       position:absolute;
       top:30px; left:-3px;
     }
+    .month-label:hover { color:#FF00BB; }
 
     .day {
       background: #CCC;
