Fixed appending new yeras

--- a/timeline.html
+++ b/timeline.html
@@ -95,7 +95,7 @@
 <script type="text/javascript">
 $(document).ready(function() {
 
-  Timeline.init();
+  Timeline.init('canvas');
 
   Timeline.addEvent({
     day : 25,
