--- a/timeline.html
+++ b/timeline.html
@@ -116,13 +116,13 @@ $(document).ready(function() {
 
   jQuery('.zoomIn').click(function() {
 
-    Timeline.scale += 1;
+    Timeline.zoomIn();
 
   });
 
   jQuery('.zoomOut').click(function() {
 
-    Timeline.scale -= 1;
+    Timeline.zoomOut();;
 
   });
 
